@@ -8,6 +8,7 @@ ART 3.7
 * Fix for save not working with pivottable.js report run using run in new page option
 * Fix for report source not being displayed in quick edit section
 * Allow saving pivot table only from a tabular report
+* Allow changing report name when overwriting a pivottable.js report
 * Updated jclouds, pivottable.js, ucanaccess
 
 ART 3.6
